# agent-db

./: .gitignore  .vercelignore  AGENTS.md  ARCHITECTURE-MCP.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN-REVIEW-MCP.md  DESIGN-REVIEW.md  LICENSE  README.en.md  README.md  ROADMAP-MCP.md  ROADMAP.md  SPIKE-0-RESULTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: CODEOWNERS
.github/workflows/: canary.yml  ci.yml  release.yml
agent-db-mcp-stdio/: Cargo.toml
agent-db-mcp-stdio/src/: main.rs
audits/client-design-2026-07-08-latest/: audit-notes.md
audits/datagrip-design-analysis-2026-07-08/: audit-notes.md
docs/: CLI_TERMINAL_PLATFORM_IMPLEMENTATION_PLAN.md  DRIVER_ARCHITECTURE.md  ISSUE_29_SCHEMA_GROUP_DIFF_PLAN.md  PROJECT.md  WORKSPACE_ROADMAP.md  commit.md
docs/adr/: 0001-operation-runtime-state.md  0002-local-broker-protocol.md  0003-terminal-session-capability.md
docs/contracts/: catalog-v2.md  database-capability-matrix.md  feature-flags.md
dopedb-cli/: Cargo.toml
dopedb-cli/src/: args.rs  client.rs  exit_code.rs  main.rs  output.rs
dopedb-cli/src/commands/: app.rs  catalog.rs  completion.rs  connection.rs  mod.rs  operation.rs  query.rs
dopedb-cli/tests/: status_e2e.rs  status_windows_e2e.rs
dopedb-mcp-stdio/: Cargo.toml
dopedb-mcp-stdio/src/: main.rs
dopedb-protocol/: Cargo.toml
dopedb-protocol/src/: catalog.rs  catalog_command.rs  command.rs  connection.rs  discovery.rs  error.rs  frame.rs  lib.rs  operation.rs  operation_command.rs  query_command.rs  request.rs  response.rs  version.rs
dopedb-protocol/tests/: golden.rs
dopedb-protocol/tests/fixtures/: app-open-error.json  app-open-request.json  app-open-success.json  catalog-snapshot-v2.json  cli-command-contract-v1.json  command-catalog-v1.json  policy-blocked.json  query-plan-request.json  runtime-discovery.json  status-request.json  status-success.json  version-error.json  version-request.json  version-success.json
examples/migrations/: 001_init.up.sql  002_add_columns.down.sql  002_add_columns.up.sql  003_add_index.down.sql  003_add_index.up.sql  004_drop_published_year.up.sql
scripts/: build-bridge.sh  build-sidecars.sh  cargo-signed-runner.sh  check-ui-depth.mjs  generate-icons.py  migrate-workspace-service.sh  tauri.sh  windows-test-import-audit.ps1
site/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts
site/app/: TrackedLink.tsx  globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
site/public/: llms.txt
site/scripts/: generate-preview.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  entitlements.plist  sign-dev.sh  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_install.rs  dashboard.rs  error.rs  features.rs  lib.rs  main.rs  model.rs  state.rs  workspace.rs  workspace_auth.rs
src-tauri/src/agent/: claude.rs  codex.rs  mod.rs
src-tauri/src/audit/: chain.rs  mod.rs
src-tauri/src/broker/: discovery.rs  dispatch.rs  mod.rs  peer.rs  server.rs  session.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/connection/: keychain.rs  mod.rs  pool.rs  providers.rs  runtime.rs
src-tauri/src/driver/: mod.rs
src-tauri/src/executor/: cancel.rs  mod.rs  read.rs  write.rs
src-tauri/src/introspect/: catalog_v2.rs  mod.rs  mysql.rs  pg.rs  sqlite.rs
src-tauri/src/mcp/: connect.rs  mod.rs  tools.rs
src-tauri/src/mcp/tools/: golden_tests.rs
src-tauri/src/migrations/: applied.rs  mod.rs
src-tauri/src/mongo/: introspect.rs  mod.rs  query.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/operations/: canonicalize.rs  execute.rs  mod.rs  model.rs  repository.rs  runtime.rs  state_machine.rs
src-tauri/src/safety/: l1_parse.rs  l2_enforce.rs  l3_preview.rs  l4_gate.rs  mod.rs
src-tauri/src/services/: activity_service.rs  agent_service.rs  catalog_service.rs  connection_credentials.rs  connection_service.rs  dashboard_service.rs  document_service.rs  mod.rs  monitoring_service.rs  operation_service.rs  query_service.rs  safety_service.rs  script_service.rs  terminal_authority.rs  workspace_service.rs
src-tauri/src/sql_script/: mod.rs
src-tauri/src/store/: migrations.rs  mod.rs
src-tauri/tests/fixtures/: platform-feature-flags-v1.json
src-tauri/tests/fixtures/mcp/: list-connections-success.json  read-behavior-errors-v1.json  read-behavior-success-v1.json  read-contract-v1.json
src/components/: AgentBadge.css  AgentBadge.tsx  AgentLogDialog.css  AgentLogDialog.tsx  AgentResultView.css  AgentResultView.tsx  ApprovalCard.css  ApprovalCard.tsx  CellViewer.tsx  ConfirmButton.tsx  DashboardDraftPanel.css  DashboardDraftPanel.tsx  DashboardVisualization.css  DashboardVisualization.tsx  DataGrid.tsx  EngineMark.tsx  Icon.tsx  InfoTip.tsx  LazySqlViewer.tsx  ResultToolbar.css  ResultToolbar.tsx  RowEditor.tsx  Skeleton.css  Skeleton.tsx  SqlViewer.tsx  Toast.css  Toast.tsx  WorkbenchDocumentStrip.tsx  WorkspaceAccount.css  WorkspaceAccount.tsx  WorkspaceConnectionDialog.css  WorkspaceConnectionDialog.tsx  WorkspaceSwitcher.css  WorkspaceSwitcher.tsx  grid.css
src/design-system/: README.md  index.css  system.css  tokens.css
src/ipc/: commands.ts  types.ts
src/lib/: agentChat.test.ts  agentChat.tsx  agentFeed.tsx  autoScroll.test.ts  autoScroll.ts  capabilities.ts  dashboardSpec.ts  documentGrid.ts  export.ts  i18n.tsx  queries.test.ts  queries.ts  queryClient.test.ts  queryClient.tsx  relTime.ts  schemaDiff.test.ts  schemaDiff.ts  sqlBuild.ts  sqlStatements.ts  tableRef.ts  useQueryRun.test.ts  useQueryRun.ts  workbenchDocuments.test.ts  workbenchDocuments.ts  workspaceAccounts.test.ts  workspaceAccounts.ts  workspaceAuthLifecycle.test.ts  workspaceAuthLifecycle.ts
workspace-cloud/: .env.example  README.md  drizzle.config.ts  next.config.mjs  package.json  pnpm-lock.yaml  vercel.json
workspace-cloud/app/: globals.css  layout.tsx
workspace-cloud/drizzle/: 0000_tiresome_silhouette.sql  0001_silky_xorn.sql  0002_wise_sway.sql  (+5 more)
workspace-service/: README.md
(+132 files in other folders)
