[package]
name = "agent-db-mcp-stdio"
version = "0.1.0"
edition = "2021"
description = "stdio<->TCP bridge so stdio-only MCP clients (Claude Desktop) reach the running agent-db app"

[[bin]]
name = "agent-db-mcp-stdio"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net"] }
serde_json = "1"
dirs = "5"
