[package]
name = "dopedb-mcp-stdio"
version = "0.1.1"
edition = "2021"
description = "stdio<->TCP bridge so stdio-only MCP clients (Claude Desktop) reach the running dopedb app"
license = "MIT"

[[bin]]
name = "dopedb-mcp-stdio"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net"] }
serde_json = "1"
dirs = "6"
