[package]
name = "dopedb-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Versioned local IPC and catalog contracts shared by DopeDB Desktop and CLI"
license = "MIT"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["serde"] }
zeroize = { version = "1.9", features = ["serde"] }
