[package]
name = "agent-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "macOS-native, agent-driven database client (local MCP server)"
authors = ["Launcher Capital"]
license = "UNLICENSED"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agent-db"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "macros",
    # rust_decimal: lossless NUMERIC/DECIMAL decode (exact-string in the JSON grid).
    "rust_decimal",
    # PG-only decoders for otherwise-unsupported column types; all TLS-agnostic
    # (no native-tls), compatible with tls-rustls-ring.
    "ipnetwork",   # INET/CIDR  -> IpNetwork
    "mac_address", # MACADDR    -> MacAddress
    "bit-vec",     # BIT/VARBIT -> BitVec
] }
sqlparser = "0.52"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
keyring = { version = "3", features = ["apple-native"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rmcp = { version = "1.8", features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
axum = "0.8.9"
tokio-util = "0.7.18"
dashmap = "6.2.1"
schemars = "1.2.1"
notify = "8.2.0"
tauri-plugin-dialog = "2.7.1"
