[package]
name = "dopedb"
version = "0.3.1"
edition = "2021"
rust-version = "1.94"
description = "Cross-platform, agent-driven database client (local MCP server)"
authors = ["Jaesong Choi"]
license = "MIT"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dopedb"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "uuid",
    "json",
    "macros",
    # rust_decimal: lossless NUMERIC/DECIMAL decode (exact-string in the JSON grid).
    "rust_decimal",
    # PG-only decoders for otherwise-unsupported column types; all TLS-agnostic
    # (no native-tls), compatible with tls-rustls-ring.
    "ipnetwork",   # INET/CIDR  -> IpNetwork
    "mac_address", # MACADDR    -> MacAddress
    "bit-vec",     # BIT/VARBIT -> BitVec
] }
mongodb = "3.8"
sqlparser = "0.62"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
keyring = "4.1"
zeroize = "1.9"
dirs = "6"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
rmcp = { version = "2.2", features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
axum = "0.8.9"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio-util = "0.7.19"
dashmap = "6.2.1"
schemars = "1.2.1"
tauri-plugin-dialog = "2.7.2"
tauri-plugin-opener = "2.5.4"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3"
